Fix: avoid scrollbars

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -13,6 +13,7 @@ body {
   animation-duration: 10s;
   color: #E4E7EB;
   height: 100%;
+  overflow: hidden;
 }
 
 .shortabs {
